[package]
name = "egui_base"
version = "0.1.0"
edition = "2024"

[dependencies]


#mandatory deps
egui = "0.29.0"
egui-keybind = "0.4.0"
egui_overlay = {version = "0.9.0", features = ["three_d"]}
egui_render_three_d = "0.9.0"
egui_window_glfw_passthrough = "0.9.0"
proc_mem = "0.1.6"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_toml = "0.0.1"
winapi = { version = "0.3.9", features = ["winuser"] }
